--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "sass": "^1.58.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
