--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.0.30",
     "sass": "^1.58.0",
     "vue": "^3.2.45",
+    "vue-request": "^1.2.4",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -20,12 +21,12 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.9.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
     "naive-ui": "^2.34.3",
     "typescript": "^4.9.5",
     "vite": "^4.0.0",
