--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "dayjs": "^1.11.7",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.30",
     "sass": "^1.58.0",
     "vue": "^3.2.45",
