--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "pinia": "^2.0.30",
     "sass": "^1.58.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
