chore(vite): make alias for paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,35 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/apis": [
+        "src/apis/*"
+      ],
+      "@/assets": [
+        "src/assets/*"
+      ],
+      "@/components": [
+        "src/components/*"
+      ],
+      "@/constants": [
+        "src/constants/*"
+      ],
+      "@/hooks": [
+        "src/hooks/index"
+      ],
+      "@/pages": [
+        "src/pages/*"
+      ],
+      "@/routers": [
+        "src/routers/index"
+      ],
+      "@/store": [
+        "src/store/index"
+      ]
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -9,10 +39,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "skipLibCheck": true,
     "noEmit": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
