--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sass": "^1.58.0",
     "vue": "^3.2.45",
     "vue-request": "^1.2.4",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-virtual-scroll-list": "^0.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -24,7 +25,7 @@
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.0.1",
+    "eslint": "^8.35.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
