fix(ci): add generating `.env` step

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,10 @@ jobs:
           version: 8
           run_install: false
 
+      - name: Generate .env file
+        run: |
+          echo "VITE_BASE=${{ vars.VITE_BASE }}" > .env
+
       - run: pnpm i
 
       - name: Build
